Docker implementation and pytest configuration. Updated README with detaield API documentation, enhanced Docker setup instructions and added usage details. Incorporated changes to  to ensure better test management and integration with Docker. The updates provide comprehensive guidance on configuration, running tests, and contributing to the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "pytestify"
 version = "0.1.0"
-description = "A base Python testing framework using pytest."
+description = "Python testing framework that enhances pytest by offering utility functions and streamlined configurations. It simplifies writing, executing, and managing tests, making it easier to achieve robust and reliable testing outcomes."
 authors = ["Javed Ansari <qabyjavedansari@gmail.com>"]
 readme = "README.md"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.12"
