--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ requests = "^2.32.3"
 pytest-mock = "^3.14.0"
 jsonschema = "^4.23.0"
 pyyaml = "^6.0.2"
+#jaraco.functools = "^4.0.2"  #Poetry is having issues with this hence commenting for now until finds a fix
+
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^5.0.0"
