feat: Add JSON comparison logic with priority-based reporting, response validation, and enhanced endpoint handling
Implemented PriorityManager and SimplePriorityManager in priority_manager.py to load priority mappings from YAML and return priorities for specific paths.
Created an abstract DifferenceReporter and a concrete SimpleDifferenceReporter in difference_reporter.py for structured difference reporting with priority levels.
Added assert_no_differences function in assertions.py for asserting and logging differences found during JSON comparison.
Introduced ResponseValidator class in response_validator.py for validating API response status codes and specific fields with logging support.
Configured pre-commit hook for Pylint in pre-commit-config.yaml to ensure code quality.
Added priority_map.yaml in config directory to define priority mappings for various fields in UPI payment status and other endpoints.
Implemented JSONComparer class for recursive JSON comparison with priority-based reporting using the PriorityManager and DifferenceReporter.
Updated conftest.py to handle multiple test markers for mock and real endpoints:
Added support for @pytest.mark.mock and @pytest.mark.real to switch between mock and real environments.
Configured WireMock to start and stop automatically using pytest fixtures.
Renamed several files in the wiremock directory for consistent naming.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,18 @@ requests = "^2.32.3"
 pytest-mock = "^3.14.0"
 jsonschema = "^4.23.0"
 pyyaml = "^6.0.2"
+
 #jaraco.functools = "^4.0.2"  #Poetry is having issues with this hence commenting for now until finds a fix
 
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^5.0.0"
+pylint = "^3.2.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+lint = "pylint src"
+
