--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,8 @@ testpaths =
     src/pytestify/tests
 log_cli_level = DEBUG
 log_cli_format = %(asctime)s - %(levelname)s - %(message)s
+markers =
+    temp: Marks tests for temp
+    fintests: Marks test for critical financial tests
+    mock: mark test to use mock server
+    real: mark test to use real API
