--- a/src/pytestify/config/config.yaml
+++ b/src/pytestify/config/config.yaml
@@ -1,9 +1,51 @@
+# src/pytestify/config/config.yaml
 base_url: "https://jsonplaceholder.typicode.com"
+#base_url: "http://localhost:8080"
+wiremock_base_url: "http://localhost:8080"
+
 endpoints:
-  posts: "/posts"
-  comments: "/comments"
-  users: "/users"
-user_id: 1
-default_post:
-  title: "foo"
-  body: "bar"
+  upi_payment_status: "/upi/payment/status"
+  get: "/posts"
+  post: "/posts"
+
+sample_test:
+  user_id: 1
+  payload:
+    default_post:
+      title: "foo"
+      body: "bar"
+  response:
+    status_code: '201'
+
+upi_payment:
+  success:
+    payload:
+      transactionId: "1234567890"
+    response:
+      status: "SUCCESS"
+      transactionId: "1234567890"
+      amount: "100.00"
+      currency: "INR"
+      message: "Payment successful"
+      upiId: "user@upi"
+  failure:
+    payload:
+      transactionId: "1234567891"
+    response:
+      status: "FAILURE"
+      transactionId: "1234567891"
+      amount: "100.00"
+      currency: "INR"
+      message: "Payment failed"
+      errorCode: "INSUFFICIENT_FUNDS"
+
+  pending:
+    payload:
+      transactionId: "1234567892"
+    response:
+      status: "PENDING"
+      transactionId: "1234567892"
+      amount: "100.00"
+      currency: "INR"
+      message: "Payment is pending"
+      upiId: "user@upi"
