--- a/wiremock/mappings/upi_success_mapping.json
+++ b/wiremock/mappings/upi_success_mapping.json
@@ -10,7 +10,7 @@
   },
   "response": {
     "status": 200,
-    "bodyFileName": "upi-success-response.json",
+    "bodyFileName": "upi_success_response.json",
     "headers": {
       "Content-Type": "application/json"
     }
