Update Jenkins Implementation, Dockerfile, Docker Compose, and Configuration
- Updated Dockerfile to correctly install and configure dependencies for testing.
- Modified docker-compose.yml to ensure proper port mapping for WireMock and pytestify services.
- Configured Jenkinsfile for better pipeline management and to handle Docker builds and tests.
- Adjusted configuration files for environment-specific settings.
These changes address issues related to port conflicts, dependency management, and test accuracy, ensuring a smoother CI/CD pipeline and robust testing framework.

--- a/src/pytestify/config/config.yaml
+++ b/src/pytestify/config/config.yaml
@@ -34,22 +34,22 @@ common_upi_payment: &common_upi_payment
 
 environments:
   dev:
-    base_url: "https://dev.api.example.com"
-    wiremock_base_url: "http://localhost:8080"
+    base_url: "https://jsonplaceholder.typicode.com"
+    wiremock_base_url: "http://localhost:8081"
     endpoints:
       upi_payment_status: "/upi/payment/status"
     upi_payment: *common_upi_payment
 
   staging:
     base_url: "https://staging.api.example.com"
-    wiremock_base_url: "http://localhost:8080"
+    wiremock_base_url: "http://localhost:8081"
     endpoints:
       upi_payment_status: "/upi/payment/status"
     upi_payment: *common_upi_payment
 
   prod:
     base_url: "https://jsonplaceholder.typicode.com"
-    wiremock_base_url: "http://localhost:8080"
+    wiremock_base_url: "http://localhost:8081"
     endpoints:
       upi_payment_status: "/upi/payment/status"
     upi_payment: *common_upi_payment
