--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   wiremock:
     image: wiremock/wiremock
     ports:
-      - "8080:8080"
+      - "8081:8080"
     volumes:
       - ./wiremock/mappings:/home/wiremock/mappings
       - ./wiremock/__files:/home/wiremock/__files
@@ -18,4 +18,4 @@ services:
       - wiremock
     environment:
       - DOCKER_ENV=true
-    command: [ "sh", "-c", "poetry run pytest --alluredir=allure-results --log-cli-level=INFO -s && allure serve allure-results" ]
+    command: [ "sh", "-c", "poetry run pytest --alluredir=allure-results --log-cli-level=INFO -s" ]
