Refactor project structure: Renamed and reorganized files from pytestify to pytestifypro, maintaining existing functionality and improving code clarity.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = --maxfail=5 --disable-warnings -q --alluredir=allure-results
 testpaths =
-    src/pytestify/tests
+    src/pytestifypro/tests
 log_cli_level = DEBUG
 log_cli_format = %(asctime)s - %(levelname)s - %(message)s
 markers =
