--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pytestify"
+name = "pytestifypro"
 version = "0.1.0"
 description = "Python testing framework that enhances pytest by offering utility functions and streamlined configurations. It simplifies writing, executing, and managing tests, making it easier to achieve robust and reliable testing outcomes."
 authors = ["Javed Ansari <qabyjavedansari@gmail.com>"]
