--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-lint = "pylint src"
+lint = "pylint:run"
 
